--- a/tailwind.html
+++ b/tailwind.html
@@ -3,7 +3,7 @@
     <div class="px-6 py-4">
         <div class="font-bold text-xl mb-2">John Doe</div>
         <p class="text-gray-700 text-base">
-            John is a software engineer with 5 years of experience in web development.
+            Sajid is a software engineer with 5 years of experience in web development.
         </p>
     </div>
     <div class="px-6 py-4">
